--- a/coupon_form.html
+++ b/coupon_form.html
@@ -18,7 +18,7 @@
 
 <body>
     <div>
-        <img src="/img/suneung/event/school/sp_main_tit_230726.png" class="tit_img" alt="학교프로젝트 타이틀">
+        <img src="https://www.itall.com/img/suneung/event/school/sp_main_tit_230726.png" alt="학교프로젝트 타이틀">
         <input type="text" class="coupon-box" maxlength="6" id="part1" onkeyup="moveFocus(6, 'part2')">
         <input type="text" class="coupon-small" maxlength="2" id="part2" onkeyup="moveFocus(2, 'part3')">
         <input type="text" class="coupon-box" maxlength="6" id="part3" onkeyup="moveFocus(6, 'part4')">
