--- a/coupon_form.html
+++ b/coupon_form.html
@@ -24,6 +24,7 @@
         <input type="text" class="coupon-box" maxlength="6" id="part3" onkeyup="moveFocus(6, 'part4')">
         <input type="text" class="coupon-small" maxlength="2" id="part4">
         <button onclick="checkCoupon()">제출</button>
+        <img src="https://www.itall.com/img/suneung/event/school/sp_main_school.png">
     </div>
     <div id="applicationForm" style="display:none;">
         <!-- 신청 폼 내용 -->
