--- a/coupon_form.html
+++ b/coupon_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023년 10월 학교프로젝트 쿠폰 신청 페이지</title>
+    <title>23년 10월 학프 쿠폰 신청페이지</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,21 +39,29 @@
         button {
             margin-top: 10px;
         }
+
+        .coupon-separator {
+            display: inline-block;
+            margin: 0 5px;
+        }
     </style>
 </head>
 
 <body>
     <div class="coupon-container">
         <img src="https://www.itall.com/img/suneung/event/school/sp_main_tit_230726.png">
-        <img src="https://www.itall.com/img/suneung/event/school/sp_main_school.png">
         <h1>2023년 10월 학교프로젝트 쿠폰으로 신청하기</h1>
         <div>
             <input type="text" class="coupon-box" maxlength="6" id="part1" onkeyup="moveFocus(6, 'part2')">
+            <span class="coupon-separator">-</span>
             <input type="text" class="coupon-small" maxlength="2" id="part2" onkeyup="moveFocus(2, 'part3')">
+            <span class="coupon-separator">-</span>
             <input type="text" class="coupon-box" maxlength="6" id="part3" onkeyup="moveFocus(6, 'part4')">
+            <span class="coupon-separator">-</span>
             <input type="text" class="coupon-small" maxlength="2" id="part4">
         </div>
         <button onclick="checkCoupon()">제출</button>
+        <img src="https://www.itall.com/img/suneung/event/school/sp_main_school.png">
     </div>
     <div id="applicationForm" style="display:none;">
         <!-- 신청 폼 내용 -->
