--- a/coupon_form.html
+++ b/coupon_form.html
@@ -23,13 +23,13 @@
         }
 
         .coupon-box {
-            width: 60px;
-            margin: 5px;
+            width: 70px;
+            margin: 5px 2px;
         }
 
         .coupon-small {
-            width: 20px;
-            margin: 5px;
+            width: 30px;
+            margin: 5px 2px;
         }
 
         img {
@@ -42,7 +42,7 @@
 
         .coupon-separator {
             display: inline-block;
-            margin: 0 5px;
+            margin: 0 1px;
         }
     </style>
 </head>
@@ -51,6 +51,7 @@
     <div class="coupon-container">
         <img src="https://www.itall.com/img/suneung/event/school/sp_main_tit_230726.png">
         <h1>2023년 10월 학교프로젝트 쿠폰으로 신청하기</h1>
+        <p>이번 학교 프로젝트를 위한 특별 쿠폰을 사용하여 신청해보세요! 쿠폰 번호를 입력하신 후 제출 버튼을 클릭하세요.</p>
         <div>
             <input type="text" class="coupon-box" maxlength="6" id="part1" onkeyup="moveFocus(6, 'part2')">
             <span class="coupon-separator">-</span>
