--- a/coupon_form.html
+++ b/coupon_form.html
@@ -20,7 +20,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-top: 20px;  /* 상단 패딩 추가 */
+            padding-top: 40px;  /* 상단 패딩을 더 증가시켰습니다. */
         }
 
         .coupon-box {
@@ -38,6 +38,10 @@
             max-width: 100%; 
         }
 
+        h1 {
+            text-align: center;  /* 제목 가운데 정렬 */
+        }
+
         button {
             margin-top: 10px;
         }
@@ -49,8 +53,8 @@
 
         @media (max-width: 768px) {
             h1 {
-                font-size: 18px; /* 모바일 화면에서의 폰트 사이즈 조정 */
-                line-height: 1.4; /* 줄 간격 조정 */
+                font-size: 18px;
+                line-height: 1.4;
             }
         }
     </style>
@@ -59,8 +63,9 @@
 <body>
     <div class="coupon-container">
         <img src="https://www.itall.com/img/suneung/event/school/sp_main_tit_230726.png">
+        <img src="https://www.itall.com/img/suneung/event/school/sp_section_03_230920.png">
         <h1>2023년 10월 학교프로젝트<br>쿠폰으로 신청하기</h1>
-        <p>이번 학교 프로젝트를 위한 특별 쿠폰을 사용하여 신청해보세요! 쿠폰 번호를 입력하신 후 제출 버튼을 클릭하세요.</p>
+        <p>제공 받으신 쿠폰을 통해 10월 학교프로젝트를 별도로 구매하지 않고 신청이 가능합니다.<br>제공 받으신 쿠폰 번호를 입력하신 후 인증하기 버튼을 클릭하세요.<br>인증되면 신청페이지로 이동합니다.</p>
         <div>
             <input type="text" class="coupon-box" maxlength="6" id="part1" onkeyup="moveFocus(6, 'part2')">
             <span class="coupon-separator">-</span>
@@ -70,7 +75,7 @@
             <span class="coupon-separator">-</span>
             <input type="text" class="coupon-small" maxlength="2" id="part4">
         </div>
-        <button onclick="checkCoupon()">제출</button>
+        <button onclick="checkCoupon()">인증하기</button>
         <img src="https://www.itall.com/img/suneung/event/school/sp_main_school.png">
     </div>
     <div id="applicationForm" style="display:none;">
