--- a/coupon_form.html
+++ b/coupon_form.html
@@ -102,7 +102,7 @@
                 fullCode === "SP2310-23-GLKUSG-02" || 
                 fullCode === "SP2310-95-NCYVKU-03" || 
                 fullCode === "SP2310-70-GANJYK-04") {
-                    alert("쿠폰이 유효합니다!");
+                    alert("인증되었습니다. 신청페이지로 이동합니다.");
                     window.location.href = "https://forms.gle/8Dxebk6F7meY2R2r7";  // 유효한 경우 지정된 URL로 이동
             } else {
                     alert("쿠폰이 유효하지 않습니다.");
