--- a/coupon_form.html
+++ b/coupon_form.html
@@ -35,8 +35,7 @@
         }
 
         img {
-            max-width: 90%; 
-            margin-bottom: 20px;
+            max-width: 500px; 
         }
 
         h1 {
@@ -53,6 +52,9 @@
         }
 
         @media (max-width: 768px) {
+            img {
+                width: 100%;
+            }
             h1 {
                 font-size: 18px;
                 line-height: 1.4;
