--- a/coupon_form.html
+++ b/coupon_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>23년 10월 학프 쿠폰 신청페이지</title>
+    <title>23년 10월 학프 쿠폰 사용페이지</title>
     <style>
         body {
             font-family: Arial, sans-serif;
