--- a/coupon_form.html
+++ b/coupon_form.html
@@ -103,7 +103,14 @@
             if (fullCode === "SP2310-61-EPFUDQ-01" || 
                 fullCode === "SP2310-23-GLKUSG-02" || 
                 fullCode === "SP2310-95-NCYVKU-03" || 
-                fullCode === "SP2310-70-GANJYK-04") {
+                fullCode === "SP2310-70-GANJYK-04" || 
+                fullCode === "SP2310-93-AEYCBL-05" || 
+                fullCode === "SP2310-48-HQJNZA-06" || 
+                fullCode === "SP2310-48-IUQUVA-07" || 
+                fullCode === "SP2310-11-IXQWHP-08" || 
+                fullCode === "SP2310-59-SEPEYT-09" || 
+                fullCode === "SP2310-31-LIGMZK-10" ||) 
+            {
                     alert("인증되었습니다. 신청페이지로 이동합니다.");
                     window.location.href = "https://forms.gle/8Dxebk6F7meY2R2r7";  // 유효한 경우 지정된 URL로 이동
             } else {
