--- a/coupon_form.html
+++ b/coupon_form.html
@@ -109,8 +109,7 @@
                 fullCode === "SP2310-48-IUQUVA-07" || 
                 fullCode === "SP2310-11-IXQWHP-08" || 
                 fullCode === "SP2310-59-SEPEYT-09" || 
-                fullCode === "SP2310-31-LIGMZK-10" ||) 
-            {
+                fullCode === "SP2310-31-LIGMZK-10" ||) {
                     alert("인증되었습니다. 신청페이지로 이동합니다.");
                     window.location.href = "https://forms.gle/8Dxebk6F7meY2R2r7";  // 유효한 경우 지정된 URL로 이동
             } else {
