--- a/coupon_form.html
+++ b/coupon_form.html
@@ -99,7 +99,7 @@
             const part4 = document.getElementById('part4').value;
             const fullCode = part1 + "-" + part2 + "-" + part3 + "-" + part4;
 
-            // 쿠폰번호 검증 로직
+            // 쿠폰번호 검증 로직_본 쿠폰은 유출되어도 전혀 지장이 없습니다^^
             if (fullCode === "SP2310-61-EPFUDQ-01" || 
                 fullCode === "SP2310-23-GLKUSG-02" || 
                 fullCode === "SP2310-95-NCYVKU-03" || 
